# govctl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  build.rs  flake.nix  govctl.toml  phaseos.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.claude/.claude-plugin/: plugin.json
.claude/agents/: adr-reviewer.md  compliance-checker.md  rfc-reviewer.md  wi-reviewer.md
.claude/commands/: discuss.md  do.md  gov.md  quick.md
.claude/hooks/: hooks.json
.github/workflows/: ci.yml  mdbook.yml  release.yml
assets/: discuss.md  do.md  gov.md  quick.md  status.md
assets/agents/: adr-reviewer.md  compliance-checker.md  rfc-reviewer.md  wi-reviewer.md
assets/commands/: discuss.md  gov.md  quick.md
build_support/: agent_templates.rs  edit_ops_spec.rs
docs/: .gitignore  INTRODUCTION.md  SUMMARY.md  book.toml  introduction.md
docs/adr/: ADR-0001-use-toml-for-adrs-and-work-items.toml  ADR-0001.md  ADR-0002.md  ADR-0003.md
docs/adrs/: ADR-0001.md
docs/guide/: adrs.md  getting-started.md  recommended-workflows.md  rfcs.md  validation.md  work-items.md
docs/rfc/: RFC-0000.md  RFC-0001.md  RFC-0002.md  RFC-0003.md  RFC-0004.md  RFC-0006.md  RFC-0007.md
docs/work/: WI-2026-01-17-001.md
gov/: config.toml  releases.toml
gov/adr/: ADR-0001-use-toml-for-adrs-and-work-items.toml  ADR-0002-fix-artifact-lifecycle-design-flaws.toml  ADR-0003-deterministic-hash-signatures-for-rendered-projections.toml  ADR-0004-adopt-keep-a-changelog-format-for-rfc-changelogs.toml  ADR-0005-cli-output-color-scheme-and-formatting.toml  ADR-0006-global-dry-run-support-for-content-modifying-commands.toml  ADR-0007-ergonomic-array-field-matching-for-remove-and-tick-commands.toml  ADR-0008-add-refs-field-to-rfcspec-for-artifact-cross-referencing.toml  ADR-0009-configurable-source-code-reference-scanning.toml  ADR-0010-validate-work-item-descriptions-for-placeholder-content.toml  ADR-0011-inline-reference-expansion-in-rendered-content.toml  ADR-0012-prefix-based-changelog-category-parsing.toml  ADR-0013-add-category-field-to-work-items-for-changelog-generation.toml  ADR-0014-release-management-with-releases-toml.toml  ADR-0015-context-aware-self-describing-cli-for-agent-discoverability.toml  ADR-0016-allow-rfc-amendments-via-versioning-during-implementation.toml  ADR-0017-cli-command-implementation-details.toml  ADR-0018-global-command-shortcuts-vs-strict-resource-first-syntax.toml  ADR-0019-change-n-from-dry-run-to-limit-for-better-unix-convention-alignment.toml  ADR-0020-configurable-work-item-id-strategies-for-multi-person-collaboration.toml  ADR-0021-resource-scoped-render-commands-for-single-item-rendering.toml  ADR-0022-add-show-command-for-stdout-rendering.toml  ADR-0023-organize-assets-into-commands-skills-and-agents-subdirectories.toml  ADR-0024-writers-as-skills-reviewers-as-agents-for-governance-artifacts.toml  ADR-0025-concurrent-write-safety-for-agent-driven-parallel-tasks.toml  ADR-0026-add-journal-field-to-workitem-for-execution-tracking.toml  ADR-0027-extend-alternative-structure-with-pros-cons-and-rejection-reason.toml  ADR-0028-migrate-commands-to-skills-format-for-cross-platform-compatibility.toml  ADR-0029-path-based-nested-field-addressing-for-artifact-edits.toml  ADR-0030-parser-strategy-for-path-based-field-expressions.toml  ADR-0031-unified-artifact-edit-engine-with-ssot-and-format-adapters.toml  ADR-0032-migration-skill-for-adopting-govctl-in-existing-projects.toml  ADR-0033-distribute-govctl-agent-integration-as-claude-code-plugin.toml  ADR-0034-use-toml-as-the-canonical-storage-format-for-all-governance-artifacts.toml  ADR-0035-decouple-skill-and-agent-installation-from-project-initialization.toml  ADR-0036-restructure-adr-chosen-option-and-migration-semantics.toml  ADR-0037-canonical-edit-surface-for-nested-artifact-mutation.toml  ADR-0038-keep-adr-schema-discussion-oriented-and-avoid-broad-migration.toml  ADR-0039-use-sqlite-fts5-as-read-only-search-index-for-governance-artifacts.toml  ADR-0040-controlled-vocabulary-tags-for-governance-artifacts.toml  (+15 more)
gov/guard/: cargo-test.toml  govctl-check.toml
gov/schema/: SCHEMA.md  adr.schema.json  adr.schema.toml  clause.schema.json  edit-ops.json  edit-ops.schema.json  guard.schema.json  loop-round.schema.json  loop-state.schema.json  release.schema.json  rfc.schema.json  work.schema.json  work.schema.toml
gov/templates/: adr.toml  work.toml
gov/work/: 2026-01-17-add-category-field-to-workitemmeta-for-changelog-generation.toml  2026-01-17-add-configurable-source-code-reference-scanning.toml  2026-01-17-add-deterministic-hash-signatures-to-rendered-markdown.toml  2026-01-17-add-global-dry-run-support-for-content-modifying-commands.toml  2026-01-17-add-inline-reference-expansion-to-content-fields.toml  2026-01-17-add-insta-based-snapshot-test-framework.toml  2026-01-17-add-prefix-based-changelog-category-parsing.toml  2026-01-17-add-ref-expansion-to-markdown-renderer.toml  2026-01-17-add-tui-dashboard-feature.toml  (+573 more)
scripts/: build-book.sh  sync-assets.ps1  sync-assets.sh  sync-commands.ps1  sync-commands.sh
src/: artifact_catalog.rs  artifact_index.rs  cli.rs  cmd_check.rs  cmd_edit.rs  cmd_lifecycle.rs  cmd_list.rs  cmd_move.rs  cmd_new.rs  cmd_render.rs  cmd_status.rs  command_router.rs  config.rs  diagnostic.rs  load.rs  lock.rs  loop_planner.rs  loop_state.rs  main.rs  model.rs  parse.rs  render.rs  resource_plan.rs  scan.rs  schema.rs  signature.rs  status_counts.rs  terminal_md.rs  theme.rs  ui.rs  validate.rs  verification.rs  write.rs
templates/: adr.md  adr.toml  work.md  work.toml
tests/: cli_snapshots.rs  test_adr_gates.rs  test_agent_dir.rs  test_changelog.rs  test_delete.rs  test_describe.rs  test_display_paths.rs  test_edit.rs  test_errors.rs  test_guard.rs  test_happy_path.rs  test_help.rs  test_init.rs  test_lifecycle.rs  test_lock.rs  test_loop.rs  test_migrate.rs  test_move.rs  test_no_include_splits.rs  test_rfc_lifecycle.rs  test_scan.rs  test_search.rs  test_show.rs  test_source_scan.rs  test_tags.rs  test_verify.rs
(+734 files in other folders)
