[package]
name = "govctl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Project governance CLI for RFC, ADR, and Work Item management"
license = "MIT"
repository = "https://github.com/govctl-org/govctl"
homepage = "https://github.com/govctl-org/govctl"
documentation = "https://docs.rs/govctl"
readme = "README.md"
keywords = ["governance", "rfc", "cli", "adr", "specification"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "govctl"
path = "src/main.rs"

[features]
default = []
tui = ["ratatui", "crossterm"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON Schema validation
jsonschema = "0.39"

# Output formatting
comfy-table = "7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Versioning
semver = { version = "1", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Config parsing
toml = "0.9"

# Utilities
strum = { version = "0.27", features = ["derive"] }
slug = "0.1"

# Terminal colors (with TTY detection for agent-friendly output)
owo-colors = "4"
supports-color = "3"

# TUI (optional)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
sha2 = "0.10.9"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
