[package]
name = "govctl"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
description = "Project governance CLI for RFC, ADR, and Work Item management"
license = "MIT"
repository = "https://github.com/govctl-org/govctl"
homepage = "https://github.com/govctl-org/govctl"
documentation = "https://docs.rs/govctl"
readme = "README.md"
keywords = ["governance", "rfc", "cli", "adr", "specification"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "govctl"
path = "src/main.rs"

[features]
default = []
tui = ["ratatui", "crossterm"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization (JSON/TOML)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Validation and versioning
jsonschema = "0.42"
semver = { version = "1", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography (signature verification)
sha2 = "0.10"

# Random number generation (for work item ID strategy)
rand = "0.10"

# Text processing
regex = "1"
slug = "0.1"
strum = { version = "0.27", features = ["derive"] }

# File system traversal
walkdir = "2"
globset = "0.4"

# Process-level file locking (for concurrent write safety per RFC-0004)
fs2 = "0.4"

# Terminal output
comfy-table = "7"
owo-colors = "4"
supports-color = "3"

# TUI (optional feature)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
regex = "1"
chrono = "0.4"
