[package]
name = "govctl"
version = "0.8.3"
edition = "2024"
rust-version = "1.88"
description = "Project governance CLI for RFC, ADR, and Work Item management"
license = "MIT"
repository = "https://github.com/govctl-org/govctl"
homepage = "https://github.com/govctl-org/govctl"
documentation = "https://docs.rs/govctl"
readme = "README.md"
keywords = ["governance", "rfc", "cli", "adr", "specification"]
categories = ["command-line-utilities", "development-tools"]
include = [
    ".claude/.claude-plugin/*",
    ".claude/agents/*",
    ".claude/skills/**/*",
    "gov/schema/*.json",
    "gov/templates/*",
    "src/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "govctl"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm", "ansi-to-tui"]
ansi-to-tui = ["dep:ansi-to-tui"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization (JSON/TOML)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Validation and versioning
jsonschema = "0.45"
semver = { version = "1", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography (signature verification)
sha2 = "0.10"

# Random number generation (for work item ID strategy)
rand = "0.10"

# Text processing
regex = "1"
slug = "0.1"
strum = { version = "0.28", features = ["derive"] }
winnow = "0.7"
pulldown-cmark = "0.13"

# File system traversal
walkdir = "2"
globset = "0.4"

# Process-level file locking (for concurrent write safety per RFC-0004)
fs2 = "0.4"

# Self-update (binary replacement from GitHub Releases)
# Implements [[RFC-0002:C-SELF-UPDATE]]
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

# Terminal output
comfy-table = "7"
owo-colors = "4"
supports-color = "3"

# TUI (optional feature)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
markdown-to-ansi = "0.2.1"
terminal_size = "0.4.3"
ansi-to-tui = { version = "8", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
regex = "1"
chrono = "0.4"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/govctl-v{ version }-{ target }.{ archive-format }"
bin-dir = "govctl-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[lints.clippy]
unwrap_used = { level = "deny", priority = 0 }
expect_used = { level = "deny", priority = 0 }
panic = { level = "deny", priority = 0 }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1"
jsonschema = "0.45"
